--- a/CarRental/appsettings.json
+++ b/CarRental/appsettings.json
@@ -8,9 +8,17 @@
     "AllowedHosts": "*",
 
     "ConnectionStrings": {
-        "DefaultConnection": "Server=MSI\\SQLEXPRESS;Database=CarRentalDb;Trusted_Connection=True;MultipleActiveResultSets=true; TrustServerCertificate =True"
+        "DefaultConnection": "Server=MSI\\SQLEXPRESS;Database=CarRentalDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+
     },
 
- 
+    "EmailSettings": {
+        "SmtpServer": "smtp.gmail.com",
+        "Port": 587,
+        "SenderEmail": "dmcarss23@gmail.com",
+        "SenderName": "DM Online Car Rental",
+        "SenderPassword": "eetz qjnu lpxl tjqc"
+    }
+
 
 }
